--- a/web/views/home.handlebars
+++ b/web/views/home.handlebars
@@ -1,77 +1,4 @@
-<script>
-$(document).ready(function(){
-      $('.parallax').parallax();
-    });
-</script>
 
-  <div class="parallax-container valign-wrapper">
-    <div class="parallax"><img src="image/City-Landscape-Wallpaper.jpg"></div>
-    <div class="container valign">
-      <div class="row">
-        <div class="col s12 m10 offset-m1 l8 offset-l2 center">
-          <div class="card-panel grey darken-3">
-            <h2 class="header white-text">Vos photos en ligne</h2>
-            <h5 class="white-text">Partagez vos photos de vacances et créez des albums collaboratifs</h5>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="section grey darken-3">
-    <div class="row container">
-      <h2 class="header white-text">Inscription</h2>
-    </div>
-  </div>
-  <div class="parallax-container valign-wrapper">
-    <div class="parallax"><img src="image/City-Landscape-Wallpaper2.jpg"></div>
-    <div class="container valign">
-      <div class="row">
-        <div class="col s12 m10 offset-m1 l8 offset-l2 center">
-          <div class="card-panel grey darken-3">
-            <form action="inscription" method="post">
-              <div class="row">
-                <div class="col l3 valign-wrapper hide-on-med-and-down">
-                  <div class="valign">
-                    <i class="mdi-social-person-add large"></i>
-                  </div>
-                </div>
-                <div class="col s12 l9">
-                  <div class="row">
-                    <div class="input-field col s12">
-                      <input id="pseudo" type="text" class="validate" name="pseudo">
-                      <label for="pseudo">Pseudo</label>
-                    </div>
-                    <div class="input-field col s12 l6">
-                      <input id="password1" type="password" class="validate" name="mdp">
-                      <label for="password1">Mot de passe</label>
-                    </div>
-                    <div class="input-field col s12 l6">
-                      <input id="password2" type="password" class="validate" name="mdp2">
-                      <label class="hide-on-large-only" for="password2">Mot de passe (encore)</label>
-                    </div>
-                  </div>
-                </div>
-                <div class="col s12">
-                  <div class="row">
-                    <div class="col l1 valign-wrapper hide-on-med-and-down input-field-prefix">
-                      <div class="valign">
-                        <i class="mdi mdi-communication-email small"></i>
-                      </div>
-                    </div>
-                    <div class="input-field col s12 l11">
-                      <input id="email" type="email" class="validate" name="email">
-                      <label for="email">Email</label>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <button class="btn waves-effect waves-light teal darken-1" type="submit">
-                S'inscrire
-                <i class="mdi-content-send right"></i>
-              </button>
-            </form>
-          </div>
-        </div>
-      </div >
-    </div>
-  </div>
+<div class="parallax-container valign-wrapper">
+  <div class="parallax"><img src="/image/plage.jpeg"></div>
+</div>
