--- a/web/views/layouts/main.handlebars
+++ b/web/views/layouts/main.handlebars
@@ -27,7 +27,9 @@
 		'use strict';
 
 		$('.scrollspy').scrollSpy();
+		$('.parallax').parallax();
 	});
+	
 
 	// Sets parallax-container height, depending on the screen
 	$(function () {
