--- a/web/views/connexion.handlebars
+++ b/web/views/connexion.handlebars
@@ -9,7 +9,7 @@ $(document).ready(function(){
     <div class="row">
       <div class="col s12 m10 offset-m1 l8 offset-l2 center">
         <div class="card-panel grey darken-3">
-          <form action="inscription" method="post">
+          <form action="connexion" method="post">
             <div class="row">
               <div class="col l3 valign-wrapper hide-on-med-and-down">
                 <div class="valign">
