Suppression du dossier bower_components et ajout des dépendances dans bower.json, création des scripts de startup 'npm start', ajout du scrollspy

--- a/web/views/index.handlebars
+++ b/web/views/index.handlebars
@@ -11,7 +11,7 @@
       </div>
     </div>
   </div>
-  <div class="section grey darken-3">
+  <div id="inscription" class="section scrollspy grey darken-3">
     <div class="row container">
       <h2 class="header white-text">Inscription</h2>
     </div>
