--- a/web/views/partials/menu.handlebars
+++ b/web/views/partials/menu.handlebars
@@ -1,9 +1,9 @@
 <div class="navbar-fixed">
-  <nav>
-   <div class="nav-wrapper grey darken-3">
+  <nav class="grey darken-3">
+   <div class="nav-wrapper">
      <ul class="menu-right">
-       <li><a href="top" class="brand-logo">Logo</a></li>
-       <li><a href="#inscription" class="brand-logo">Inscription</a></li>
+       <li><a href="#top">Logo</a></li>
+       <li><a href="#inscription">Inscription</a></li>
      </ul>
      <ul id="nav-mobile" class="left">
         {{#if locals.session.pseudo}}
