--- a/web/views/connexion.handlebars
+++ b/web/views/connexion.handlebars
@@ -1,10 +1,5 @@
-<script>
-$(document).ready(function(){
-      $('.parallax').parallax();
-    });
-</script>
 <div class="parallax-container valign-wrapper">
-  <div class="parallax"><img src="image/welcome.jpg"></div>
+  <div class="parallax"><img src="/image/welcome.jpg"></div>
   <div class="container valign">
     <div class="row">
       <div class="col s12 m10 offset-m1 l8 offset-l2 center">
